fix: remove unwanted links

--- a/src/index.html
+++ b/src/index.html
@@ -141,13 +141,9 @@
         <h5><font color="gray">HORSEMEN OF THE INVISIBLE</font></h5>
     </div>
     <div class="menu">
-        <a href="/me.html"><span>ME</span></a> |
-        <a href="https://www.linkedin.com/in/vicente-oyanedel/"><span>LINKEDIN</span></a>
-        |
-        <a href="https://twitter.com/vichoko"><span>TWITTER</span></a> |
-        <a href="https://www.cec.uchile.cl/~vicente.oyanedel/"><span>CEC</span></a> |
-        <a href="https://users.dcc.uchile.cl/~voyanede"><span>DCC</span></a> |
-        <a href="https://github.com/vichoko"><span>GITHUB</span></a>
+        <a href="https://www.linkedin.com/in/vicente-oyanedel/"><span>LINKEDIN</span></a>|
+        <a href="https://github.com/vichoko"><span>GITHUB</span></a>|
+        <a href="https://stackoverflow.com/users/5298808/vichoko"><span>STACKOVERFLOW</span></a>
     </div>
     <!-- end template -->
     <br>
