fix: allign and remove

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
             color: lime;
             font-size: 1.5vw;
             margin-top: -2vh;
-            text-align: justify;
+            text-align: center;
         }
 
         .header h1:after {
@@ -141,8 +141,8 @@
         <h5><font color="gray">HORSEMEN OF THE INVISIBLE</font></h5>
     </div>
     <div class="menu">
-        <a href="https://www.linkedin.com/in/vicente-oyanedel/"><span>LINKEDIN</span></a>|
-        <a href="https://github.com/vichoko"><span>GITHUB</span></a>|
+        <a href="https://www.linkedin.com/in/vicente-oyanedel/"><span>LINKEDIN</span></a> |
+        <a href="https://github.com/vichoko"><span>GITHUB</span></a> |
         <a href="https://stackoverflow.com/users/5298808/vichoko"><span>STACKOVERFLOW</span></a>
     </div>
     <!-- end template -->
