fix: iso and broken imports remove comments

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<!-- start template -->
 <head>
-    <link href="/static/css/oldschool-dark.css" rel="stylesheet">
     <title>VICHOKO.cl</title>
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|Space+Mono|VT323|IBM+Plex+Mono&effect=anaglyph"
           rel="stylesheet">
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8"/>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="/static/js/rm.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async
             src="https://www.googletagmanager.com/gtag/js?id=UA-127737963-1"></script>
@@ -130,8 +126,6 @@
 
 
     </style>
-
-
 </head>
 
 <body>
@@ -145,7 +139,6 @@
         <a href="https://github.com/vichoko"><span>GITHUB</span></a> |
         <a href="https://stackoverflow.com/users/5298808/vichoko"><span>STACKOVERFLOW</span></a>
     </div>
-    <!-- end template -->
     <br>
     <div class="paragraph">
         > how r u doing.
