--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>VICHOKO.cl</title>
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|Space+Mono|VT323|IBM+Plex+Mono&effect=anaglyph"
           rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,112 +21,6 @@
         gtag('js', new Date());
         gtag('config', 'UA-127737963-1');
     </script>
-    <style>
-        html {
-            font-size: normal;
-        }
-
-        body {
-            margin-top: 2vh;
-            margin-right: 30%;
-            margin-left: 30%;
-            background-color: black;
-            color: white;
-            font-size: 2.2vw;
-        }
-
-        @media only screen and (max-width: 1000px) {
-            body {
-                margin-right: 5%;
-                margin-left: 5%;
-                font-size: 7vw;
-            }
-        }
-
-        .container {
-            font-family: 'VT323', monospace;
-        }
-
-        .header h1 {
-            letter-spacing: normal;
-            text-align: justify;
-            line-height: 0.1;
-        }
-
-        .header h1:after {
-            content: "";
-            display: inline-block;
-            width: 100%;
-        }
-
-        .header h5 {
-            letter-spacing: 0.5vw;
-            text-align: justify;
-            line-height: 0.7;
-        }
-
-        .header h5:after {
-            content: "";
-            display: inline-block;
-            width: 100%;
-        }
-
-        .anti-link {
-            color: white;
-            text-decoration: none;
-        }
-
-        .menu {
-            /*font-family: 'Share Tech Mono', monospace;*/
-            font-family: 'IBM Plex Mono', monospace;
-            color: lime;
-            font-size: 1.5vw;
-            margin-top: -2vh;
-            text-align: center;
-        }
-
-        .header h1:after {
-            content: "";
-            display: inline-block;
-            width: 100%;
-        }
-
-        @media only screen and (max-width: 1000px) {
-            .menu {
-                font-size: 3vw;
-            }
-
-            .paragraph {
-                font-size: 5vw;
-            }
-
-            h1 {
-            }
-
-            h5 {
-
-            }
-        }
-
-        .menu span {
-            text-decoration: underline;
-
-        }
-
-        .menu a {
-            color: lime;
-        }
-
-        .paragraph {
-            margin-top: 50px;
-        }
-
-        .paragraph p {
-            line-height: 0.8;
-        }
-
-
-    </style>
 </head>
 
 <body>
