feat: add bookmarks

--- a/src/header.html
+++ b/src/header.html
@@ -4,6 +4,7 @@
 </div>
 <div class="menu">
     <a href="me.html"><span>ME</span></a> |
+    <a href="bookmarks.html"><span>BOOKMARKS</span></a> |
     <a href="https://www.linkedin.com/in/vicente-oyanedel/"><span>LINKEDIN</span></a> |
     <a href="https://github.com/vichoko"><span>GITHUB</span></a> |
     <a href="https://stackoverflow.com/users/5298808/vichoko"><span>STACKOVERFLOW</span></a>
