feat: add rlhf book

--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -20,7 +20,7 @@
                 <li>
                     <h3>Reinforcement Learning</h3>
                     <ul>
-                        <li><a href="https://www.example.com">Example RL Link 1</a></li>
+                        <li><a href="https://rlhfbook.com/">RLHF Book</a></li>
                         <li><a href="https://www.example.com">Example RL Link 2</a></li>
                         <!-- Add more Reinforcement Learning links here -->
                     </ul>
