feat: add last.fm

--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -37,7 +37,7 @@
 
             <h2>Music</h2>
             <ul>
-                <li><a href="https://www.example.com">Example Music Link 1</a></li>
+                <li><a href="https://www.last.fm/user/Vichoko">Last.fm</a></li>
                 <li><a href="https://www.example.com">Example Music Link 2</a></li>
                 <!-- Add more Music links here -->
             </ul>
