--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -1,4 +1,3 @@
-
 <head>
     <title>VICHOKO.cl</title>
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|Space+Mono|VT323|IBM+Plex+Mono&effect=anaglyph"
@@ -21,7 +20,12 @@
                         <li><a href="https://rlhfbook.com/">RLHF Book</a></li>
                     </ul>
                 </li>
-
+                <li>
+                    <h3>Best Practices</h3>
+                    <ul>
+                        <li><a href="https://developers.google.com/machine-learning/guides/rules-of-ml">Rules of Machine Learning</a></li>
+                    </ul>
+                </li>
             </ul>
 
             <h2>Geophysics</h2>
