--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -21,6 +21,12 @@
                     </ul>
                 </li>
                 <li>
+                    <h3>Best Practices</h3>
+                    <ul>
+                        <li><a href="https://developers.google.com/machine-learning/guides/rules-of-ml">Rules of Machine Learning</a></li>
+                    </ul>
+                </li>
+                <li>
                     <h3>Recommendation Systems</h3>
                     <ul>
                         <li><a href="https://aman.ai/recsys/bias/">Bias in Recommendation Systems</a></li>
